fix opensource align update

--- a/web/css/header.less
+++ b/web/css/header.less
@@ -217,10 +217,11 @@
   opacity: 0;
   transform-origin: top;
   transition: all .3s;
+  border-bottom: 1px solid #e3e5e4;
 
   a {
     letter-spacing: 0;
-    text-transform: initial;
+    text-transform: none;
     font-weight: 300;
   }
 
