--- a/web/css/pages/opensource/opensource.less
+++ b/web/css/pages/opensource/opensource.less
@@ -118,7 +118,6 @@
   &__rating {
     flex-shrink: 0;
     font-size: 16px;
-    line-height: 29px;
     font-weight: 700;
     color: #A3ACB0;
     margin-left: auto;
